force-app/main/default/objects/WorkOrderLineItem/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This replaces the standard Price Book Entry lookup with our custom solution.</description>
    <label>Pricing</label>
    <referenceTo>Pricing__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>