force-app/main/default/objects/WorkOrderLineItem/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>The related product description via the pricing record.</description>
    <formula>Pricing__r.Product__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The related product description via the pricing record.</inlineHelpText>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>