force-app/main/default/objects/WorkOrderLineItem/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>47727 Product Name for sorting in tables and other</description>
    <formula>Pricing__r.Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Name of the related Product</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>