force-app/main/default/objects/WorkOrderLineItem/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <description>47727 Product Uom for datatables</description>
    <formula>TEXT( Pricing__r.Product__r.QuantityUnitOfMeasure )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product&apos;s Unit of Measure</inlineHelpText>
    <label>UoM</label>
    <type>Text</type>
</CustomField>