force-app/main/default/objects/WorkOrderLineItem/recordTypes/Estimate.recordType-meta.xml
<RecordType>
    <fullName>Estimate</fullName>
    <active>true</active>
    <description>Used for estimate line items.</description>
    <label>Estimate</label>
</RecordType>