force-app/main/default/objects/WorkOrderLineItem/validationRules/ISCHANGED_SUB_TOTAL_ESTIMATES.validationRule-meta.xml
<ValidationRule>
    <fullName>ISCHANGED_SUB_TOTAL_ESTIMATES</fullName>
    <active>true</active>
    <description>Users cannot modify estimate details after the project has been approved.</description>
    <errorConditionFormula>AND(OR(ISCHANGED(PricebookEntryId), ISCHANGED(Quantity)),  ISPICKVAL( WorkOrder.Sub_Project__r.Project__r.Project_Estimate_Approval_Status__c, &apos;Approved&apos;))</errorConditionFormula>
    <errorMessage>Users cannot modify estimate details after the project has been approved.</errorMessage>
</ValidationRule>