force-app/main/default/objects/WorkOrderLineItem/validationRules/QUANTITY_NON_NEGATIVE.validationRule-meta.xml
<ValidationRule>
    <fullName>QUANTITY_NON_NEGATIVE</fullName>
    <active>true</active>
    <description>Users cannot enter a negative quantity.</description>
    <errorConditionFormula>Quantity__c &lt; 0</errorConditionFormula>
    <errorMessage>Quantity cannot be negative.</errorMessage>
</ValidationRule>